<resources>
    <string name="app_name">Assistant</string>
    <string name="ledge">Ledge</string>
    <string name="photo">Photo</string>
    <string name="sport">Sport</string>
    <string name="murmur">Murmur</string>
    <string name="plan">Plan</string>
    <string name="appLock">App Lock</string>
    <string name="amount">金额：</string>
    <string name="amount_hint">用了多少钱</string>
    <string name="consumptionSugar">消费：</string>
    <string name="consumption_hint">买啥了</string>
    <string name="date">日期：</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="consumptionLevel">评级：</string>
    <string name="save">保存</string>
    <string name="axisTime">时间</string>
    <string name="axisConsumption">消费</string>
    <string name="ledge_content_null_prompt">消费内容/金额不能为空</string>
    <string name="app_foregroud_time">应用使用时长(分钟)</string>
    <string name="usage_permission">该功能启用访问使用情况的权限才能使用</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="all">全部</string>
    <string name="sport_title">assistant-运动数据</string>
    <string name="sport_content">运动:%1$d</string>
    <string name="title_activity_hall">HallActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="picture">图片</string>
</resources>
