<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ledge"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/ledge" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sport" />
        <item
            android:id="@+id/nav_applock"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/appLock" />
        <item
            android:id="@+id/nav_murmur"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/murmur" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
