<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_ledge">

    <data>

        <variable
            name="ledgeModel"
            type="com.xll.needer.assistant.bean.LedgeModel" />

        <variable
            name="ledgeHandler"
            type="com.xll.needer.assistant.eventhandler.LedgeHandler" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/consumptionSugar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/consumption_magin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buyThings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/consumptionSugar" />

            <EditText
                android:id="@+id/goods"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/consumption_hint"
                android:inputType="text"
                android:text="@={ledgeModel.goods}"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/amount" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:text="@={ledgeModel.price}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date" />

            <Button
                android:id="@+id/consumptionDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="start|center_vertical"
                android:onClick="@{ledgeHandler::onClickConsumptionDate}"
                android:text="@={ledgeModel.consumptionDate}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/consumptionLevel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/consumptionLevel" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:entries="@{ledgeModel.consumptionLevel}"
                android:selectedItemPosition="@={ledgeModel.levelSelectPosition}"
                android:spinnerMode="dropdown" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/save"
                android:onClick="@{ledgeHandler::onSave}"
                android:src="@drawable/save" />
        </LinearLayout>

    </LinearLayout>


</layout>