<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.xll.needer.assistant.eventhandler.TimeHandler" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_1"
            android:layout_marginStart="@dimen/dimen_1"
            android:background="@drawable/timer_selector"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{handler::onDayClick}"
            android:text="@string/day" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_1"
            android:layout_marginStart="@dimen/dimen_1"
            android:background="@drawable/timer_selector"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{handler::onMonthClick}"
            android:text="@string/month" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_1"
            android:layout_marginStart="@dimen/dimen_1"
            android:background="@drawable/timer_selector"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{handler::onYearClick}"
            android:text="@string/year" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_1"
            android:layout_marginStart="@dimen/dimen_1"
            android:background="@drawable/timer_selector"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{handler::onAllClick}"
            android:text="@string/all" />


    </LinearLayout>
</layout>

